# rag-pipeline

./: .gitignore  Readme.md  main.py  pyproject.toml
data/test_files/: ml_guide.txt  sample.html  sample.md  sample.txt
src/api/: __init__.py  app.py
src/api/routes/: __init__.py  health.py  ingest.py  query.py
src/config/: __init__.py  logging_config.py  settings.py
src/core/chunking/: __init__.py  base.py  factory.py  recursive_chunker.py  sentence_chunker.py
src/core/document_loaders/: __init__.py  base.py  factory.py  pdf_loader.py  text_loader.py  web_loader.py
src/core/embeddings/: __init__.py  base.py  factory.py  huggingface_embedding.py
src/core/llm/: __init__.py  groq_llm.py
src/core/rerankers/: __init__.py  cohere_reranker.py
src/infrastructure/: __init__.py
src/infrastructure/cache/: __init__.py  embedding_cache.py
src/infrastructure/vector_store/: __init__.py  zilliz_store.py
src/models/: __init__.py  documents.py  errors.py  queries.py
src/services/: __init__.py  ingestion_service.py  rag_service.py  retrieval_service.py
tests/: test_api.py  test_chunking.py  test_config.py  test_embedding.py  test_installation.py  test_loaders.py  test_models.py  test_reranker_llm.py  test_services.py  test_vector_store.py
